# infiray_irg

./: .gitignore  LICENSE  README.md  example.irg  example.py  pyproject.toml  run_tests.py
src/: infiray_irg.py
